--- a/src/assets/sass/component/login.scss
+++ b/src/assets/sass/component/login.scss
@@ -1,7 +1,9 @@
 .login {
 	display: flex;
-	justify-content: space-between;
+	// justify-content: space-between;
+	gap: 100px;
 	align-items: center;
+	justify-content: center;
 	height: 100vh;
 	@include e(contain) {
 		display: flex;
@@ -10,7 +12,7 @@
 		width: 100%;
 
 		@include mq(xl) {
-			width: 50%;
+			width: 500px;
 		}
 	}
 
@@ -70,6 +72,7 @@
 		display: flex;
 		align-items: center;
 		text-align: center;
+		margin-bottom: -20px;
 	}
 
 	@include e(line) {
