Add manage employee UI

--- a/src/assets/sass/component/index.scss
+++ b/src/assets/sass/component/index.scss
@@ -1,4 +1,10 @@
+@import "zingex";
+@import "color";
+@import "variable";
+@import "modal";
 @import "global";
 @import "login";
 @import "header";
 @import "navbar";
+@import "dashboard";
+@import "employee";
