Complete manage employee

--- a/src/assets/sass/component/color.scss
+++ b/src/assets/sass/component/color.scss
@@ -2,3 +2,6 @@ $base-colors-white: white;
 $backdrop: rgba(0, 0, 0, 0.801);
 $backdrop-2: rgba(0, 0, 0, 0.24);
 $base-colors-blue-black: rgb(0, 0, 0);
+$light_blue: #eef4f7;
+$white: white;
+$grey: rgb(206, 206, 206);
