--- a/src/assets/sass/component/index.scss
+++ b/src/assets/sass/component/index.scss
@@ -1,10 +1,11 @@
 @import "zingex";
-@import "color";
 @import "variable";
-@import "modal";
+@import "color";
 @import "global";
+@import "modal";
 @import "login";
 @import "header";
 @import "navbar";
 @import "dashboard";
 @import "employee";
+@import "profile";
