--- a/src/assets/sass/component/dashboard.scss
+++ b/src/assets/sass/component/dashboard.scss
@@ -1,30 +1,50 @@
 .dashboard {
 	display: flex;
 	flex-direction: column;
-	// align-items: center;
 	width: 100%;
 	padding-top: 50px;
 
 	@include e(top-part) {
 		display: flex;
-		justify-content: space-between;
+		flex-direction: column;
 		align-items: center;
 		width: 100%;
-		padding: 0 100px;
+		padding: 0 20px;
+		gap: 40px;
+		justify-content: left;
+
+		@include mq(lg) {
+			flex-direction: row;
+		}
 	}
 }
 
 .dashboardInfo {
 	display: flex;
 	flex-direction: column;
+	width: 100%;
 	gap: 60px;
+
+	@include e(elements) {
+		display: flex;
+		flex-direction: column;
+		gap: 40px;
+
+		@include mq(lg) {
+			flex-direction: row;
+		}
+	}
+
+	@include mq(lg) {
+		width: 50%;
+	}
 }
 
 .dashboardEvent {
+	margin: 0 20px;
 	margin-top: 40px;
-	padding: 0 100px;
-	// add box shadow
-	box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
+	padding: 0 50px;
+	background-color: $white;
 	border-radius: 10px;
 	padding-bottom: 20px;
 }
@@ -66,21 +86,20 @@
 }
 
 .info {
-	box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
+	background-color: $white;
 	border-radius: 10px;
-	width: 500px;
 	text-align: end;
 	position: relative;
 	z-index: 0;
+	flex-grow: 1;
 
 	@include e(logo) {
 		position: absolute;
 		left: 30px;
-		top: -30px;
-		// border: 1px solid red;
+		top: -20px;
 		border-radius: 50%;
-		height: 60px;
-		width: 60px;
+		height: 40px;
+		width: 40px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -88,17 +107,12 @@
 	}
 
 	@include e(text) {
-		padding-top: 70px;
+		padding-top: 78px;
 		padding-right: 10px;
 	}
 
-	@include e(title) {
-		font-size: 20px;
-		font-weight: 600;
-	}
-
 	@include e(count) {
-		font-size: 40px;
+		font-size: 32px;
 		font-weight: 600;
 		padding-top: 10px;
 		padding-bottom: 30px;
@@ -107,12 +121,25 @@
 
 .dashboard {
 	@include e(profile-info) {
+		border-radius: 10px;
+		padding: 10px;
+		flex-grow: 1;
+		background-color: $white;
+		width: 100%;
+
+		h2 {
+			text-align: center;
+		}
+
+		@include mq(lg) {
+			width: 50%;
+		}
 	}
 	@include e(message) {
 		p {
 			padding-top: 10px;
 			color: grey;
-			margin-bottom: 50px;
+			margin-bottom: 40px;
 			text-align: center;
 		}
 	}
@@ -130,8 +157,9 @@
 			align-items: center;
 			overflow: hidden;
 			font-size: 100px;
-			background-color: rgba(128, 128, 128, 0.301);
+			background-color: rgba(18, 106, 238, 0.301);
 			margin-bottom: 20px;
+			color: white;
 		}
 	}
 }
