--- a/src/assets/sass/component/modal.scss
+++ b/src/assets/sass/component/modal.scss
@@ -8,25 +8,25 @@
 }
 
 //for loading state
-// .loader {
-//   @extend %common-styles;
-//   border: 3.6px solid $base-colors-sky-blue;
-//   border-bottom-color: $base-colors-gray;
-//   height: 32px;
-//   width: 32px;
-//   border-radius: 50%;
-//   box-sizing: border-box;
-//   animation: rotation 1s linear infinite;
+.loader {
+	@extend %common-styles;
+	border: 3.6px solid black;
+	border-bottom-color: grey;
+	height: 32px;
+	width: 32px;
+	border-radius: 50%;
+	box-sizing: border-box;
+	animation: rotation 1s linear infinite;
 
-//   @keyframes rotation {
-//     0% {
-//       transform: rotate(0deg);
-//     }
-//     100% {
-//       transform: rotate(360deg);
-//     }
-//   }
-// }
+	@keyframes rotation {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(360deg);
+		}
+	}
+}
 
 .modal {
 	@extend %common-styles;
@@ -106,6 +106,7 @@
 			line-height: 36px;
 			margin-bottom: 0;
 			font-weight: $font-weight-semi-bold;
+			text-transform: capitalize;
 		}
 
 		@include m(shadow) {
