Add project management

--- a/src/assets/sass/component/color.scss
+++ b/src/assets/sass/component/color.scss
@@ -5,3 +5,6 @@ $base-colors-blue-black: rgb(0, 0, 0);
 $light_blue: #eef4f7;
 $white: white;
 $grey: rgb(206, 206, 206);
+$text: #12354d;
+$normal: #3498db;
+$normal-hover: #2f89c5;
