--- a/src/assets/sass/component/login.scss
+++ b/src/assets/sass/component/login.scss
@@ -49,7 +49,7 @@
 	}
 
 	@include e(google) {
-		background: #fff;
+		margin-top: 20px;
 		border: 1px solid #ebebeb;
 		border-radius: 24px;
 		display: flex;
@@ -61,7 +61,7 @@
 		color: black;
 
 		&:hover {
-			background: #ebebeb;
+			background: #d3e4ee67;
 		}
 	}
 }
