--- a/src/assets/sass/component/project.scss
+++ b/src/assets/sass/component/project.scss
@@ -1,5 +1,5 @@
 .project {
-	width: 100%;
+	width: calc(100% - 262px);
 	padding: 20px;
 
 	@include e(main-title) {
@@ -18,8 +18,12 @@
 	}
 
 	@include e(info-item) {
-		width: 150px;
+		width: 120px;
 		text-align: center;
+
+		@include mq(md) {
+			width: 200px;
+		}
 		h2 {
 			font-size: 24px;
 			margin-bottom: 10px;
@@ -75,6 +79,11 @@
 		margin-top: 20px;
 		display: flex;
 		justify-content: space-between;
+		flex-direction: column;
+		gap: 20px;
+		@include mq(md) {
+			flex-direction: row;
+		}
 
 		button {
 			padding: 10px 40px;
@@ -139,6 +148,10 @@
 
 .project-id {
 	width: 100%;
+	@include mq(lg) {
+		width: calc(100% - 262px);
+	}
+
 	padding: 20px;
 
 	> h2 {
@@ -342,8 +355,11 @@
 		margin-top: 20px;
 		padding: 20px;
 		border-radius: 10px;
-		flex-grow: 1;
+		width: 100%;
 
+		@include mq(lg) {
+			width: calc(100% - 265px);
+		}
 		@include m(header) {
 			display: flex;
 			justify-content: space-between;
@@ -368,31 +384,34 @@
 
 		@include m(other-attachments-item) {
 			display: flex;
-			flex-direction: column;
-			gap: 40px;
-			align-items: center;
+			flex-direction: row;
 			border: 1px solid $grey;
 			padding: 20px;
 			border-radius: 10px;
+			flex-wrap: wrap;
+			column-gap: 10px;
+			gap: 20px;
+			justify-content: space-evenly;
 
+			img {
+				width: 200px;
+				height: 200px;
+				object-fit: cover;
+				border-radius: 10px;
+			}
 			h3 {
-				font-size: 20px;
+				font-size: 16px;
 				color: $text;
 				font-weight: bold;
 			}
 
 			@include m(images) {
 				display: flex;
-				gap: 40px;
-				justify-content: center;
+				flex-direction: column;
+				gap: 10px;
 				align-items: center;
-				flex-wrap: wrap;
-				img {
-					width: 200px;
-					height: 200px;
-					object-fit: cover;
-					border-radius: 10px;
-				}
+				border: 1px solid $grey;
+				padding: 10px;
 			}
 		}
 		@include m(upload) {
@@ -414,6 +433,13 @@
 				text-align: center;
 				font-weight: bold;
 				width: 100%;
+			}
+
+			img {
+				width: 200px;
+				height: 200px;
+				object-fit: cover;
+				border-radius: 10px;
 			}
 		}
 	}
