Ticket dashboard complete

--- a/src/assets/sass/component/project.scss
+++ b/src/assets/sass/component/project.scss
@@ -1,6 +1,9 @@
 .project {
-	width: calc(100% - 262px);
 	padding: 20px;
+
+	@include mq(lg) {
+		width: calc(100% - 262px);
+	}
 
 	@include e(main-title) {
 		color: $text;
@@ -143,6 +146,15 @@
 	th {
 		background-color: #278ceb;
 		color: white;
+	}
+
+	@include e(assignee-item) {
+		border: 1px solid #ddd;
+		padding: 10px;
+		border-radius: 5px;
+		display: flex;
+		gap: 10px;
+		margin: 10px 0;
 	}
 }
 
@@ -443,4 +455,43 @@
 			}
 		}
 	}
+}
+.add-btn {
+	padding: 10px 0px;
+	background-color: $normal;
+	color: $white;
+	border-radius: 10px;
+	text-align: center;
+	font-weight: bold;
+	width: 100%;
+	width: 100px;
+}
+
+.assignee-list {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.assignee-element {
+	margin: 10px;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	display: flex;
+	align-items: center;
+	width: 100%;
+
+	label {
+		margin-left: 10px;
+	}
+}
+
+.assignee-element input {
+	margin-right: 8px;
+}
+
+/* Optional: Highlight the selected assignee */
+.assignee-element input:checked + label {
+	font-weight: bold;
+	color: #3498db; /* You can use any color you prefer */
 }
