--- a/src/assets/sass/component/dashboard.scss
+++ b/src/assets/sass/component/dashboard.scss
@@ -1,7 +1,7 @@
 .dashboard {
 	display: flex;
 	flex-direction: column;
-	width: calc(100% - 262px);
+
 	padding-top: 50px;
 
 	@include e(top-part) {
@@ -15,6 +15,66 @@
 
 		@include mq(lg) {
 			flex-direction: row;
+		}
+	}
+
+	@include mq(lg) {
+		width: calc(100% - 262px);
+	}
+
+	@include e(attendance) {
+		border: 1px solid #ddd;
+		padding: 20px;
+		border-radius: 10px;
+		background-color: $white;
+	}
+
+	@include e(attendance-btns) {
+		display: flex;
+		gap: 20px;
+		margin-top: 20px;
+		padding-bottom: 30px;
+		border-bottom: 1px solid #ddd;
+		button {
+			display: flex;
+			padding: 10px;
+			border: 1px solid #ddd;
+			border-radius: 10px;
+			width: 140px;
+			justify-content: center;
+			align-items: center;
+			gap: 10px;
+
+			&:hover {
+				background-color: #ddd;
+			}
+		}
+	}
+
+	@include e(time) {
+		display: flex;
+		gap: 20px;
+		padding-top: 30px;
+		padding-bottom: 20px;
+
+		div:nth-child(1) {
+			border-right: 1px solid #ddd;
+			padding-right: 20px;
+		}
+
+		div {
+			display: flex;
+			flex-direction: column;
+			gap: 20px;
+
+			p {
+				font-size: 18px;
+			}
+
+			a {
+				font-size: 18px;
+				color: blue;
+			}
 		}
 	}
 }
