--- a/src/assets/sass/component/ticket.scss
+++ b/src/assets/sass/component/ticket.scss
@@ -231,4 +231,90 @@
 			outline: 0px;
 		}
 	}
+	@include e(comments) {
+		background-color: $white;
+		margin-top: 20px;
+		padding: 20px;
+		border-radius: 10px;
+		flex-grow: 1;
+
+		@include m(header) {
+			display: flex;
+			align-items: center;
+			border-bottom: 1px solid $grey;
+			padding-bottom: 20px;
+			h3 {
+				font-size: 20px;
+				color: $text;
+				font-weight: bold;
+			}
+		}
+
+		@include m(other-comments) {
+			display: flex;
+			flex-direction: column;
+			gap: 20px;
+			margin-top: 20px;
+			border-bottom: 1px solid $grey;
+			padding-bottom: 20px;
+			padding-left: 20px;
+		}
+
+		@include m(other-comments-item) {
+			display: flex;
+			gap: 20px;
+			align-items: center;
+
+			h3 {
+				font-size: 18px;
+				color: $text;
+				font-weight: bold;
+				width: 100px;
+			}
+
+			p {
+				font-size: 16px;
+				color: $normal;
+				border: 1px solid $grey;
+				width: calc(100% - 100px);
+				padding: 10px;
+				border-radius: 10px;
+			}
+		}
+
+		@include m(add-comment) {
+			display: flex;
+			flex-direction: column;
+			gap: 20px;
+			margin-top: 20px;
+			h3 {
+				font-size: 18px;
+				color: $text;
+				font-weight: bold;
+			}
+
+			textarea {
+				padding: 10px;
+				border-radius: 4px;
+				border: 1px solid $grey;
+
+				&:focus {
+					border: none;
+				}
+
+				&:focus-visible {
+					outline: none;
+					border: 1px solid $grey;
+				}
+			}
+
+			button {
+				padding: 10px 40px;
+				border-radius: 4px;
+				background-color: $normal;
+				color: $white;
+				font-weight: bold;
+			}
+		}
+	}
 }
