--- a/src/assets/sass/component/color.scss
+++ b/src/assets/sass/component/color.scss
@@ -3,6 +3,7 @@ $backdrop: rgba(0, 0, 0, 0.801);
 $backdrop-2: rgba(0, 0, 0, 0.24);
 $base-colors-blue-black: rgb(0, 0, 0);
 $light_blue: #eef4f7;
+$light_blue-hover: #d3ebf7;
 $white: white;
 $grey: rgb(206, 206, 206);
 $text: #12354d;
