Add attendance UI

--- a/src/assets/sass/component/color.scss
+++ b/src/assets/sass/component/color.scss
@@ -9,3 +9,5 @@ $grey: rgb(206, 206, 206);
 $text: #12354d;
 $normal: #3498db;
 $normal-hover: #2f89c5;
+$ui-colors-border-color: #d3d3d3;
+$ui-colors-border-color-hover: #b3b3b3;
