Add attendance in user profile

--- a/src/assets/sass/component/color.scss
+++ b/src/assets/sass/component/color.scss
@@ -11,3 +11,4 @@ $normal: #3498db;
 $normal-hover: #2f89c5;
 $ui-colors-border-color: #d3d3d3;
 $ui-colors-border-color-hover: #b3b3b3;
+$color : rgba(233, 230, 230, 0.199)
