--- a/src/assets/sass/component/dashboard.scss
+++ b/src/assets/sass/component/dashboard.scss
@@ -114,7 +114,7 @@
 		margin-top: 20px;
 		padding-bottom: 20px;
 		border-bottom: 1px solid rgb(240, 230, 230);
-		margin-bottom: 10px;
+		margin-bottom: 20px;
 	}
 
 	@include e(info) {
@@ -134,6 +134,9 @@
 	}
 
 	@include e(sub-title) {
+		margin-bottom: 20px;
+		border-bottom: 1px solid #ddd;
+		padding-bottom: 20px;
 		h3 {
 			font-size: 18px;
 			font-weight: 600;
