--- a/src/assets/sass/component/request.scss
+++ b/src/assets/sass/component/request.scss
@@ -61,6 +61,13 @@
 		margin-top: 40px;
 		padding-bottom: 40px;
 		border-bottom: 1px solid #ddd;
+
+		.active {
+			background-color: $light_blue-hover;
+
+			// disable it
+			pointer-events: none;
+		}
 	}
 
 	@include e(my-options-element) {
@@ -183,6 +190,7 @@
 			font-size: 24px;
 			font-weight: 600;
 			color: $text;
+			margin: auto 0;
 		}
 
 		svg {
