Add announcement UI with text editor

--- a/src/assets/sass/component/color.scss
+++ b/src/assets/sass/component/color.scss
@@ -6,9 +6,10 @@ $light_blue: #eef4f7;
 $light_blue-hover: #d3ebf7;
 $white: white;
 $grey: rgb(206, 206, 206);
+$dark-grey: #646464;
 $text: #12354d;
 $normal: #3498db;
 $normal-hover: #2f89c5;
 $ui-colors-border-color: #d3d3d3;
 $ui-colors-border-color-hover: #b3b3b3;
-$color : rgba(233, 230, 230, 0.199)
+$color: rgba(233, 230, 230, 0.199);
