--- a/src/assets/sass/component/announcement.scss
+++ b/src/assets/sass/component/announcement.scss
@@ -1,4 +1,17 @@
 .announcement {
+	ul,
+	ol {
+		padding: 10px 20px;
+	}
+
+	ul {
+		list-style-type: disc;
+	}
+
+	ol {
+		list-style-type: decimal;
+	}
+
 	width: 100%;
 	padding: 20px;
 	@include mq(lg) {
@@ -45,7 +58,7 @@
 
 		button {
 			width: 100%;
-			height: 40px;
+			height: 46px;
 			border-radius: 4px;
 			background-color: $normal;
 			color: $white;
@@ -225,6 +238,31 @@
 	@include e(element-content) {
 		.ql-editor {
 			min-height: 300px;
+		}
+	}
+
+	@include e(preview) {
+		margin: 20px;
+		background-color: $white;
+		padding: 20px;
+		border-radius: 10px;
+
+		ul,
+		ol {
+			padding: 10px 20px;
+		}
+
+		ul {
+			list-style-type: disc;
+		}
+
+		ol {
+			list-style-type: decimal;
+		}
+
+		h2 {
+			padding: 0 20px;
+			color: $text;
 		}
 	}
 }
