--- a/src/assets/sass/component/announcement.scss
+++ b/src/assets/sass/component/announcement.scss
@@ -261,8 +261,18 @@
 		}
 
 		h2 {
-			padding: 0 20px;
 			color: $text;
+			padding-bottom: 10px;
+			margin-bottom: 10px;
+			border-bottom: 1px solid #ddd;
+		}
+
+		.announcement__element {
+			padding: 0;
+
+			h3 {
+				font-size: 16px;
+			}
 		}
 	}
 }
