--- a/src/assets/sass/component/index.scss
+++ b/src/assets/sass/component/index.scss
@@ -2,6 +2,7 @@
 @import "variable";
 @import "color";
 @import "global";
+@import "notification";
 @import "modal";
 @import "popover";
 @import "login";
