--- a/src/assets/sass/component/notification.scss
+++ b/src/assets/sass/component/notification.scss
@@ -10,7 +10,75 @@
 	border-radius: 10px;
 	display: none;
 
+	button {
+		color: $normal;
+		border: none;
+		cursor: pointer;
+		transition: 0.2s all;
+
+		&:hover {
+			color: $normal-hover;
+			text-decoration: underline;
+		}
+	}
+
+	@include e(title) {
+		display: flex;
+		justify-content: space-between;
+	}
+
 	@include m(open) {
 		display: block;
+	}
+
+	@include e(list) {
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+	}
+
+	@include e(item) {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 20px;
+		border-radius: 10px;
+		background-color: $white;
+		box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.123);
+		transition: 0.2s all;
+		cursor: pointer;
+
+		&:hover {
+			background-color: $grey;
+			p {
+				font-weight: bold;
+			}
+		}
+
+		@include m(title) {
+			display: flex;
+			align-items: center;
+			gap: 20px;
+			p {
+				font-size: 16px;
+				width: 350px;
+			}
+		}
+	}
+}
+
+.notification {
+	@include e(count) {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: $normal;
+		color: $white;
+		border-radius: 50%;
+		width: 20px;
+		height: 20px;
+		position: absolute;
+		top: -10px;
+		right: -10px;
 	}
 }
