--- a/src/assets/sass/component/notification.scss
+++ b/src/assets/sass/component/notification.scss
@@ -9,6 +9,7 @@
 	box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.123);
 	border-radius: 10px;
 	display: none;
+	overflow: hidden;
 
 	button {
 		color: $normal;
@@ -35,6 +36,10 @@
 		display: flex;
 		flex-direction: column;
 		gap: 20px;
+		height: 450px;
+		overflow-y: auto;
+		scrollbar-color: $grey;
+		scrollbar-width: thin;
 	}
 
 	@include e(item) {
@@ -49,10 +54,7 @@
 		cursor: pointer;
 
 		&:hover {
-			background-color: $grey;
-			p {
-				font-weight: bold;
-			}
+			background-color: $color;
 		}
 
 		@include m(title) {
