--- a/src/assets/sass/component/notification.scss
+++ b/src/assets/sass/component/notification.scss
@@ -10,6 +10,7 @@
 	border-radius: 10px;
 	display: none;
 	overflow: hidden;
+	padding: 10px;
 
 	button {
 		color: $normal;
@@ -35,7 +36,6 @@
 	@include e(list) {
 		display: flex;
 		flex-direction: column;
-		gap: 20px;
 		height: 450px;
 		overflow-y: auto;
 		scrollbar-color: $grey;
@@ -46,10 +46,9 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		padding: 20px;
+		padding: 30px 10px;
 		border-radius: 10px;
 		background-color: $white;
-		box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.123);
 		transition: 0.2s all;
 		cursor: pointer;
 
@@ -63,7 +62,7 @@
 			gap: 20px;
 			p {
 				font-size: 16px;
-				width: 350px;
+				width: 330px;
 			}
 		}
 	}
