--- a/src/assets/sass/component/ticket.scss
+++ b/src/assets/sass/component/ticket.scss
@@ -28,8 +28,50 @@
 		}
 	}
 
+	@include e(filter-status) {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 10px;
+		background-color: $white;
+
+		button {
+			width: 180px;
+			height: 50px;
+			border-radius: 4px;
+			font-weight: bold;
+
+			&:hover {
+				background-color: #c2c2c263;
+				border-radius: 4px;
+			}
+		}
+
+		.active {
+			// outline-bottom: 4px solid black;
+			transition: 0.2s all;
+			font-weight: bold;
+			font-size: 16px;
+			border-bottom: 3px solid black;
+		}
+	}
+
+	@include e(list-element) {
+		margin-top: 20px;
+		display: flex;
+		flex-direction: column;
+		gap: 10px;
+
+		.empty {
+			background-color: $white;
+			padding: 10px;
+			border-radius: 10px;
+		}
+	}
+
 	@include e(manage-info) {
 		background-color: $white;
+		border-radius: 10px;
+		overflow: hidden;
 	}
 
 	@include e(header-btn) {
