--- a/src/assets/sass/component/dashboard.scss
+++ b/src/assets/sass/component/dashboard.scss
@@ -107,6 +107,11 @@
 	background-color: $white;
 	border-radius: 10px;
 	padding-bottom: 20px;
+	width: 100%;
+
+	@include mq(md) {
+		width: 50%;
+	}
 }
 
 .event {
