--- a/src/assets/sass/component/login.scss
+++ b/src/assets/sass/component/login.scss
@@ -71,7 +71,7 @@
 		display: flex;
 		align-items: center;
 		text-align: center;
-		margin-bottom: -20px;
+		// margin-bottom: -20px;
 	}
 
 	@include e(line) {
