--- a/src/assets/sass/component/ticket.scss
+++ b/src/assets/sass/component/ticket.scss
@@ -69,6 +69,11 @@
 	}
 
 	@include e(manage) {
+		@include m(btns) {
+			display: flex;
+			flex-wrap: wrap;
+			gap: 5px;
+		}
 		table {
 			width: 100%;
 			border-collapse: collapse;
@@ -87,12 +92,6 @@
 				padding: 8px 12px;
 				cursor: pointer;
 				border-radius: 4px;
-				margin-right: 5px;
-				margin-bottom: 5px;
-
-				@include mq(lg) {
-					margin-bottom: 0;
-				}
 			}
 
 			button:hover {
