--- a/src/assets/sass/component/attendance.scss
+++ b/src/assets/sass/component/attendance.scss
@@ -34,6 +34,7 @@
 		flex-direction: column;
 		margin-bottom: 20px;
 		margin-top: 20px;
+		align-items: center;
 
 		#filter {
 			font-family: "Arial", sans-serif;
