--- a/src/assets/sass/component/employee.scss
+++ b/src/assets/sass/component/employee.scss
@@ -206,3 +206,11 @@
 	border-radius: 10px;
 	border: 1px solid #ddd;
 }
+
+.search-btn {
+	width: 100%;
+	text-align: left;
+	background-color: white !important;
+	color: $text !important;
+	border: 1px solid #ddd !important;
+}
