--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -109,3 +109,27 @@ $dark-theme: (
 img {
 	max-width: 100%;
 }
+
+.no-scroll,
+.disable-scroll {
+	position: static;
+	height: auto;
+	overflow: hidden !important;
+
+	@media (hover: hover) {
+		padding-right: 2px;
+	}
+}
+
+.screen-loader {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 9999;
+}
