--- a/src/assets/sass/component/dashboard.scss
+++ b/src/assets/sass/component/dashboard.scss
@@ -121,6 +121,11 @@
 		width: 50%;
 	}
 
+	@include e(ticket-h2) {
+		font-size: 20px;
+		font-weight: 600;
+	}
+
 	@include e(ticket) {
 		display: flex;
 		gap: 20px;
