--- a/src/assets/sass/component/employee.scss
+++ b/src/assets/sass/component/employee.scss
@@ -22,6 +22,19 @@
 		}
 	}
 
+	@include e(form-change-password) {
+		background-color: $white;
+		width: 100%;
+		padding: 20px;
+		border: 1px solid #ddd;
+		border-radius: 10px;
+		margin: 10px;
+
+		@include mq(md) {
+			width: 50%;
+		}
+	}
+
 	@include e(details) {
 		padding: 20px;
 		background-color: #fff;
