--- a/src/assets/sass/component/profile.scss
+++ b/src/assets/sass/component/profile.scss
@@ -2,6 +2,10 @@
 	width: 100%;
 	padding: 0 20px;
 
+	@include mq(lg) {
+		width: calc(100% - 262px);
+	}
+
 	@include e(header) {
 		margin-top: 20px;
 	}
@@ -24,10 +28,11 @@
 			display: flex;
 			justify-content: center;
 			img {
-				width: 270px;
-				height: 270px;
+				width: 300px;
+				height: 300px;
 				border-radius: 10px;
 				background-color: #fff;
+				cursor: pointer;
 			}
 		}
 
@@ -122,4 +127,17 @@
 			border-radius: 10px;
 		}
 	}
+}
+
+.profile-pic {
+	width: 300px;
+	height: 300px;
+	font-size: 200px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: $normal;
+	color: $white;
+	border-radius: 10px;
+	cursor: pointer;
 }
