--- a/src/assets/sass/component/calendar.scss
+++ b/src/assets/sass/component/calendar.scss
@@ -6,13 +6,34 @@
 	width: calc(100% - 262px);
 
 	@include e(view) {
+		display: flex;
+		width: 100%;
 		flex-grow: 1;
-		padding: 3em;
+		padding: 10px;
+
+		.fc {
+			width: 75%;
+		}
 	}
 
 	@include e(list-element) {
 		display: flex;
 		flex-direction: column;
+
+		p {
+			font-size: 18px;
+			font-weight: 400;
+			color: #636161;
+		}
+		i {
+			font-size: 20px;
+			font-weight: 600;
+			font-style: normal;
+			padding: 5px;
+			border-radius: 10px;
+			border: 1px solid #ddd;
+			background-color: $white;
+		}
 
 		div {
 			display: flex;
@@ -21,7 +42,7 @@
 	}
 
 	@include e(section) {
-		width: 300px;
+		width: 500px;
 		line-height: 1.5;
 		background: #eaf9ff;
 		border-right: 1px solid #d3e2e8;
@@ -29,6 +50,10 @@
 		display: flex;
 		flex-direction: column;
 		gap: 20px;
+		height: 90vh;
+		overflow-y: auto;
+		scrollbar-color: $grey;
+		scrollbar-width: thin;
 
 		.checkbox-label {
 			display: flex;
@@ -38,7 +63,7 @@
 			color: white;
 			font-weight: bold;
 			padding: 10px;
-			width: 200px;
+			width: 100%;
 			border-radius: 20px;
 			cursor: pointer;
 			justify-content: center;
@@ -63,10 +88,16 @@
 			cursor: pointer;
 			justify-content: center;
 			margin-top: 20px;
+			width: 100%;
 		}
 	}
 
 	@include e(section-events) {
+		ul {
+			display: flex;
+			flex-direction: column;
+		}
+
 		h2 {
 			margin-bottom: 20px;
 		}
@@ -81,6 +112,9 @@
 .fc {
 	max-width: 1100px;
 	margin: 0 auto;
+	background-color: $white;
+	padding: 20px;
+	border-radius: 10px;
 }
 
 .form {
