--- a/src/assets/sass/component/request.scss
+++ b/src/assets/sass/component/request.scss
@@ -85,7 +85,38 @@
 		display: flex;
 		flex-direction: column;
 		gap: 20px;
-		margin-bottom: 20px;
+		margin-bottom: 10px;
+		border-top: 1px solid #ddd;
+		padding-top: 10px;
+		border-bottom: 1px solid #ddd;
+		padding-bottom: 20px;
+		justify-content: center;
+
+		@include m(elements) {
+			display: flex;
+			gap: 20px;
+			flex-wrap: wrap;
+			align-items: center;
+		}
+
+		input {
+			padding: 10px;
+			border: 1px solid #ddd;
+			border-radius: 10px;
+			background-color: $white;
+		}
+
+		button {
+			width: 200px;
+			padding: 10px;
+			border: 1px solid #ddd;
+			border-radius: 10px;
+			background-color: $white;
+			cursor: pointer;
+			background: $normal;
+			color: $white;
+			font-weight: 500;
+		}
 
 		h3 {
 			font-size: 20px;
