--- a/src/assets/sass/component/attendance.scss
+++ b/src/assets/sass/component/attendance.scss
@@ -1,6 +1,10 @@
 .attendance {
-	width: max(100% - 262px);
 	padding: 20px;
+	width: 100%;
+
+	@include mq(xl) {
+		width: max(100% - 262px);
+	}
 
 	@include e(main-title) {
 		color: $text;
@@ -10,6 +14,11 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		flex-direction: column;
+
+		@include mq(xl) {
+			flex-direction: row;
+		}
 
 		button {
 			padding: 10px;
@@ -76,12 +85,17 @@
 			gap: 20px;
 			background-color: $white;
 			padding: 20px;
-			width: 200px;
 			border-radius: 20px;
 			height: 150px;
 			display: flex;
 			justify-content: center;
 			align-items: center;
+			width: 100%;
+
+			@include mq(md) {
+				width: 200px;
+			}
+
 			h3 {
 				font-size: 20px;
 				color: $text;
