--- a/src/assets/sass/component/calendar.scss
+++ b/src/assets/sass/component/calendar.scss
@@ -3,7 +3,13 @@
 	min-height: 100%;
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 	font-size: 14px;
-	width: calc(100% - 262px);
+	flex-direction: column;
+	width: 100%;
+
+	@include mq(xl) {
+		flex-direction: row;
+		width: calc(100% - 262px);
+	}
 
 	@include e(view) {
 		display: flex;
@@ -12,7 +18,11 @@
 		padding: 10px;
 
 		.fc {
-			width: 75%;
+			width: 100%;
+
+			@include mq(xl) {
+				width: 75%;
+			}
 		}
 	}
 
@@ -42,7 +52,7 @@
 	}
 
 	@include e(section) {
-		width: 500px;
+		width: 100%;
 		line-height: 1.5;
 		background: #eaf9ff;
 		border-right: 1px solid #d3e2e8;
@@ -54,6 +64,10 @@
 		overflow-y: auto;
 		scrollbar-color: $grey;
 		scrollbar-width: thin;
+
+		@include mq(xl) {
+			width: 500px;
+		}
 
 		.checkbox-label {
 			display: flex;
