--- a/src/assets/sass/component/dashboard.scss
+++ b/src/assets/sass/component/dashboard.scss
@@ -13,7 +13,7 @@
 		gap: 40px;
 		justify-content: left;
 
-		@include mq(lg) {
+		@include mq(xl) {
 			flex-direction: row;
 		}
 	}
@@ -30,8 +30,12 @@
 		display: flex;
 		flex-direction: column;
 		// flex-grow: 1;
-		width: 50%;
+		width: 100%;
 		height: fit-content;
+
+		@include mq(xl) {
+			width: 50%;
+		}
 	}
 
 	@include e(attendance-btns) {
@@ -95,12 +99,12 @@
 		flex-direction: column;
 		gap: 40px;
 
-		@include mq(lg) {
+		@include mq(md) {
 			flex-direction: row;
 		}
 	}
 
-	@include mq(lg) {
+	@include mq(xl) {
 		width: 50%;
 	}
 }
@@ -119,7 +123,7 @@
 	height: 100%;
 	// margin-right: 40px;
 
-	@include mq(md) {
+	@include mq(xl) {
 		width: 50%;
 	}
 
@@ -208,7 +212,11 @@
 	position: relative;
 	z-index: 0;
 	flex-grow: 1;
-	width: 255px;
+	width: 100%;
+
+	@include mq(md) {
+		width: 255px;
+	}
 
 	@include e(logo) {
 		position: absolute;
@@ -252,7 +260,7 @@
 			text-align: center;
 		}
 
-		@include mq(lg) {
+		@include mq(xl) {
 			width: 50%;
 		}
 	}
