--- a/src/assets/sass/component/appraisal.scss
+++ b/src/assets/sass/component/appraisal.scss
@@ -27,6 +27,11 @@
 		flex-wrap: wrap;
 		padding-bottom: 20px;
 		border-bottom: 1px solid #ddd;
+		justify-content: center;
+
+		@include mq(md) {
+			justify-content: flex-start;
+		}
 
 		button {
 			// padding: 4px 10px;
