--- a/src/assets/sass/component/profile.scss
+++ b/src/assets/sass/component/profile.scss
@@ -81,8 +81,14 @@
 			span {
 				display: inline-block;
 				font-weight: 600;
-				width: 250px;
 				text-transform: capitalize;
+				width: fit-content;
+				margin-right: 5px;
+
+				@include mq(md) {
+					width: 250px;
+					margin-right: 0px;
+				}
 			}
 		}
 
