--- a/src/assets/sass/component/request.scss
+++ b/src/assets/sass/component/request.scss
@@ -157,6 +157,12 @@
 			background-color: $white;
 			border-radius: 20px;
 			gap: 10px;
+			flex-grow: 1;
+
+			@include mq(md) {
+				flex-grow: 0;
+			}
+
 			h3 {
 				font-size: 24px;
 				font-weight: 600;
@@ -204,8 +210,12 @@
 
 	@include e(list-element-2) {
 		display: flex;
-		// flex-direction: column;
 		gap: 30px;
+		flex-direction: column;
+
+		@include mq(md) {
+			flex-direction: row;
+		}
 
 		h3 {
 			font-size: 24px;
@@ -251,6 +261,11 @@
 		display: flex;
 		gap: 20px;
 		align-content: center;
+		justify-content: center;
+
+		@include mq(md) {
+			justify-content: flex-start;
+		}
 
 		h3 {
 			font-size: 18px;
