--- a/src/assets/sass/component/project.scss
+++ b/src/assets/sass/component/project.scss
@@ -665,6 +665,11 @@
 			border-radius: 10px;
 			background-color: $light_blue;
 			transition: all 0.2s;
+			flex-direction: column;
+
+			@include mq(md) {
+				flex-direction: row;
+			}
 
 			&:hover {
 				background-color: $light_blue-hover;
@@ -704,7 +709,7 @@
 
 		@include e(element) {
 			display: flex;
-			flex-direction: row;
+			flex-direction: column;
 			align-items: center;
 			justify-content: space-between;
 			gap: 10px;
@@ -714,6 +719,10 @@
 			background-color: $light_blue;
 			transition: all 0.2s;
 			cursor: pointer;
+
+			@include mq(md) {
+				flex-direction: row;
+			}
 
 			h3 {
 				font-weight: bold;
